--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,26 +1,44 @@
-# Core
-class.name=PhoneCall
+# Core Configuration
+# Classes listed below are available in template
+# Column:
+# - Name:
+# - Gender:
+# - Nation:
+# - Address:
+# - PhoneNumber:
+# - SafeInfo:
+# Schema:
+# - BankAccount: 开户行, 卡号, 开户日期, 开户人身份证, 开户人姓名, 开户名手机号
+# - BankBill: 转出账号, 转账人姓名, 收款账号, 收款人姓名, 转账金额, 交易类型, 转账渠道, 转账方式, 转账时间, 转账附言, 手续费
+# - CDC: 数据示例："2016-06-12 11:02:03","1465700523694","U","CDC_MIRROR","7325830911134034944","ZQU","6217844638089027584","MU"
+# - Hotel: 酒店名称, 地址
+# - People: 姓名, 性别, 民族, 身份证号, 出生日期, 手机号, 邮箱地址, 家庭住址
+# - PhoneCall: 主叫人姓名, 主叫人身份证, 主叫人电话号码, 被叫人姓名, 被叫人身份证, 被叫人电话号码, 通话日期, 开始时间, 通话时常
+# - S_CORP_RCV: RPTNO, 企业组织机构代码, RCV_DATE, SAFECODE, 收汇美元金额, 交易代码
+# - S_EXPF: CUSTOM_RPT_NO, 企业组织机构代码, EXP_DATE
+template=Name Gender Nation Address PhoneNumber SafeInfo
+delimiter=,
 topic=foo
 thread.num=2
 data.per.second=1
 
-# People
+# People Configuration
 people.begin.date=19500101
 people.end.date=20101231
 
-# HFTB
-# Travel
-# Bank Account
+# HFTB Configuration
+# Travel Configuration
+# BankAccount Configuration
 people.topic=people
 bank.account.base=10000000
 
-# Bank Bill
-# Safe (EXPF, RCV)
+# BankBill Configuration
+# S_EXPF, S_CORP_RCV Configuration
 safe.base=10000000
 safe.begin.year=1990
 safe.end.year=2017
 safe.prefix=12345
 
-# Phone Call
+# PhoneCall Configuration
 phone.window.size=5
 phone.ratio=1
