--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -16,11 +16,12 @@
 # - PhoneCall: 主叫人姓名, 主叫人身份证, 主叫人电话号码, 被叫人姓名, 被叫人身份证, 被叫人电话号码, 通话日期, 开始时间, 通话时常
 # - S_CORP_RCV: RPTNO, 企业组织机构代码, RCV_DATE, SAFECODE, 收汇美元金额, 交易代码
 # - S_EXPF: CUSTOM_RPT_NO, 企业组织机构代码, EXP_DATE
-template=Name Gender Nation Address PhoneNumber SafeInfo
+#template=Name Gender Nation Address PhoneNumber SafeInfo
+template=People SafeInfo Hotel
 delimiter=,
 topic=foo
-thread.num=2
-data.per.second=1
+thread.num=4
+data.per.second=100000
 
 # People Configuration
 people.begin.date=19500101
