2018/03/08 Add feature Timestamp & RegexString

--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,13 +1,18 @@
-# Core Configuration
+# ----------Core Configuration----------
 # Classes listed below are available in template
-# Column:
-# - Name:
-# - Gender:
-# - Nation:
-# - Address:
-# - PhoneNumber:
-# - SafeInfo:
-# Schema:
+# [Column]
+# - Address: 地址，可配置地址权重（address_code文件）
+# - Bank: 银行名称，可配置权重（bank文件）
+# - Email: 邮箱，可配置邮箱后缀（email_suffix文件）
+# - Gender: 性别
+# - IDCard: 身份证号，可配置生日范围
+# - Name: 姓名，可配置姓权重（first_name文件）
+# - Nation: 民族，可配置权重（nation文件）
+# - PhoneNumber: 手机号码，可配置手机号前缀权重（phone_prefix文件）
+# - SafeInfo: 外汇局代码，可配置权重（safe_info文件）
+# - T:Format & Begin & End: 时间戳，如：T:yyyy/MM/dd HH:mm:ss & 1980/01/01 00:00:00 & 2015/12/31 23:59:59
+# - R:Regular Expression: 使用正则表达式生成随机字符串，如：R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
+# [Schema]
 # - BankAccount: 开户行, 卡号, 开户日期, 开户人身份证, 开户人姓名, 开户名手机号
 # - BankBill: 转出账号, 转账人姓名, 收款账号, 收款人姓名, 转账金额, 交易类型, 转账渠道, 转账方式, 转账时间, 转账附言, 手续费
 # - CDC: 数据示例："2016-06-12 11:02:03","1465700523694","U","CDC_MIRROR","7325830911134034944","ZQU","6217844638089027584","MU"
@@ -16,30 +21,36 @@
 # - PhoneCall: 主叫人姓名, 主叫人身份证, 主叫人电话号码, 被叫人姓名, 被叫人身份证, 被叫人电话号码, 通话日期, 开始时间, 通话时常
 # - S_CORP_RCV: RPTNO, 企业组织机构代码, RCV_DATE, SAFECODE, 收汇美元金额, 交易代码
 # - S_EXPF: CUSTOM_RPT_NO, 企业组织机构代码, EXP_DATE
-#template=Name Gender Nation Address PhoneNumber SafeInfo
-template=People SafeInfo Hotel
+#
+# Each column MUST be separated by ``
+template=Name``T:HH:mm:ss & 12:00:00 & 14:59:59``IDCard``R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
+#template=BankBill
 delimiter=,
-topic=foo
+topic=test
 thread.num=4
-data.per.second=100000
-
-# People Configuration
+data.per.second=1000000
+# ----------Schema Configuration----------
+# [People (IDCard)]
+# Date format MUST be 'yyyyMMdd'
 people.begin.date=19500101
 people.end.date=20101231
-
-# HFTB Configuration
-# Travel Configuration
-# BankAccount Configuration
+# [Travel]
+# [BankAccount]
 people.topic=people
 bank.account.base=10000000
-
-# BankBill Configuration
-# S_EXPF, S_CORP_RCV Configuration
+# [BankBill]
+bank.account.topic=bankaccount
+bank.bill.window.size=100
+bank.bill.ratio=1.0
+bank.bill.base=10000
+bank.bill.charge=0.01
+# [S_EXPF, S_CORP_RCV]
 safe.base=10000000
 safe.begin.year=1990
 safe.end.year=2017
 safe.prefix=12345
-
-# PhoneCall Configuration
-phone.window.size=5
-phone.ratio=1
+# [PhoneCall]
+phone.window.size=50
+phone.ratio=1.0
+# Unit: minute
+phone.duration.base=60
