--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -23,8 +23,8 @@
 # - S_EXPF: CUSTOM_RPT_NO, 企业组织机构代码, EXP_DATE
 #
 # Each column MUST be separated by ``
-template=Name``T:HH:mm:ss & 12:00:00 & 14:59:59``IDCard``R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
-#template=BankBill
+#template=Name``T:HH:mm:ss & 12:00:00 & 14:59:59``IDCard``R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
+template=Bus
 delimiter=,
 topic=test
 thread.num=4
@@ -32,14 +32,14 @@ data.per.second=1000000
 # ----------Schema Configuration----------
 # [People (IDCard)]
 # Date format MUST be 'yyyyMMdd'
+people.topic=people
 people.begin.date=19500101
 people.end.date=20101231
 # [Travel]
 # [BankAccount]
-people.topic=people
+bank.account.topic=bankaccount
 bank.account.base=10000000
 # [BankBill]
-bank.account.topic=bankaccount
 bank.bill.window.size=100
 bank.bill.ratio=1.0
 bank.bill.base=10000
