--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,29 +1,29 @@
 # ----------Core Configuration----------
 # Classes listed below are available in template
 # [Column]
-# - Address: µØÖ·£¬¿ÉÅäÖÃµØÖ·È¨ÖØ£¨address_codeÎÄ¼þ£©
-# - Bank: ÒøÐÐÃû³Æ£¬¿ÉÅäÖÃÈ¨ÖØ£¨bankÎÄ¼þ£©
-# - Email: ÓÊÏä£¬¿ÉÅäÖÃÓÊÏäºó×º£¨email_suffixÎÄ¼þ£©
-# - Gender: ÐÔ±ð
-# - IDCard: Éí·ÝÖ¤ºÅ£¬¿ÉÅäÖÃÉúÈÕ·¶Î§
-# - Name: ÐÕÃû£¬¿ÉÅäÖÃÐÕÈ¨ÖØ£¨first_nameÎÄ¼þ£©
-# - Nation: Ãñ×å£¬¿ÉÅäÖÃÈ¨ÖØ£¨nationÎÄ¼þ£©
-# - PhoneNumber: ÊÖ»úºÅÂë£¬¿ÉÅäÖÃÊÖ»úºÅÇ°×ºÈ¨ÖØ£¨phone_prefixÎÄ¼þ£©
-# - SafeInfo: Íâ»ã¾Ö´úÂë£¬¿ÉÅäÖÃÈ¨ÖØ£¨safe_infoÎÄ¼þ£©
-# - T:Format & Begin & End: Ê±¼ä´Á£¬Èç£ºT:yyyy/MM/dd HH:mm:ss & 1980/01/01 00:00:00 & 2015/12/31 23:59:59
-# - R:Regular Expression: Ê¹ÓÃÕýÔò±í´ïÊ½Éú³ÉËæ»ú×Ö·û´®£¬Èç£ºR:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
+# - Address: åœ°å€ï¼Œå¯é…ç½®åœ°å€æƒé‡ï¼ˆaddress_codeæ–‡ä»¶ï¼‰
+# - Bank: é“¶è¡Œåç§°ï¼Œå¯é…ç½®æƒé‡ï¼ˆbankæ–‡ä»¶ï¼‰
+# - Email: é‚®ç®±ï¼Œå¯é…ç½®é‚®ç®±åŽç¼€ï¼ˆemail_suffixæ–‡ä»¶ï¼‰
+# - Gender: æ€§åˆ«
+# - IDCard: èº«ä»½è¯å·ï¼Œå¯é…ç½®ç”Ÿæ—¥èŒƒå›´
+# - Name: å§“åï¼Œå¯é…ç½®å§“æƒé‡ï¼ˆfirst_nameæ–‡ä»¶ï¼‰
+# - Nation: æ°‘æ—ï¼Œå¯é…ç½®æƒé‡ï¼ˆnationæ–‡ä»¶ï¼‰
+# - PhoneNumber: æ‰‹æœºå·ç ï¼Œå¯é…ç½®æ‰‹æœºå·å‰ç¼€æƒé‡ï¼ˆphone_prefixæ–‡ä»¶ï¼‰
+# - SafeInfo: å¤–æ±‡å±€ä»£ç ï¼Œå¯é…ç½®æƒé‡ï¼ˆsafe_infoæ–‡ä»¶ï¼‰
+# - T:Format & Begin & End: æ—¶é—´æˆ³ï¼Œå¦‚ï¼šT:yyyy/MM/dd HH:mm:ss & 1980/01/01 00:00:00 & 2015/12/31 23:59:59
+# - R:Regular Expression: ä½¿ç”¨æ­£åˆ™è¡¨è¾¾å¼ç”Ÿæˆéšæœºå­—ç¬¦ä¸²ï¼Œå¦‚ï¼šR:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
 # [Schema]
-# - BankAccount: ÒøÐÐÕËºÅ£º¿ª»§ÐÐ, ¿¨ºÅ, ¿ª»§ÈÕÆÚ, ¿ª»§ÈËÉí·ÝÖ¤, ¿ª»§ÈËÐÕÃû, ¿ª»§ÃûÊÖ»úºÅ
-# - BankBill: ÒøÐÐÕËµ¥Ã÷Ï¸£º×ª³öÕËºÅ, ×ªÕËÈËÐÕÃû, ÊÕ¿îÕËºÅ, ÊÕ¿îÈËÐÕÃû, ×ªÕË½ð¶î, ½»Ò×ÀàÐÍ, ×ªÕËÇþµÀ, ×ªÕË·½Ê½, ×ªÕËÊ±¼ä, ×ªÕË¸½ÑÔ, ÊÖÐø·Ñ
-# - Bus: Æû³µ³öÐÐ£ºÐÕÃû, ÐÔ±ð, Éí·ÝÖ¤ºÅ, ³öÐÐÈÕÆÚ, ³µ´Î, ³ö·¢Æû³µÕ¾, ·¢³µÊ±¼ä, ×ùÎ»ºÅ, ³ö·¢³ÇÊÐ, µ½´ï³ÇÊÐ
-# - CDC: Êý¾ÝÊ¾Àý£º"2016-06-12 11:02:03","1465700523694","U","CDC_MIRROR","7325830911134034944","ZQU","6217844638089027584","MU"
-# - Flight: ·É»ú³öÐÐ£ºÐÕÃû, Ó¢ÎÄÃû, Éí·ÝÖ¤ºÅ, ÐÔ±ð, º½°àºÅ, ³öÐÐÈÕÆÚ, ×ùÎ»ºÅ, Æð·ÉÊ±¼ä, Æð·É³ÇÊÐ, µ½´ï³ÇÊÐ
-# - Hotel: ¾Æµê£º¾ÆµêÃû³Æ, µØÖ·
-# - People: ÈË¿Ú£ºÐÕÃû, ÐÔ±ð, Ãñ×å, Éí·ÝÖ¤ºÅ, ³öÉúÈÕÆÚ, ÊÖ»úºÅ, ÓÊÏäµØÖ·, ¼ÒÍ¥×¡Ö·
-# - PhoneCall: »°µ¥Êý¾Ý£ºÖ÷½ÐÈËÐÕÃû, Ö÷½ÐÈËÉí·ÝÖ¤, Ö÷½ÐÈËµç»°ºÅÂë, ±»½ÐÈËÐÕÃû, ±»½ÐÈËÉí·ÝÖ¤, ±»½ÐÈËµç»°ºÅÂë, Í¨»°ÈÕÆÚ, ¿ªÊ¼Ê±¼ä, Í¨»°Ê±³£
-# - S_CORP_RCV: Íâ»ã¾ÖRCVÊý¾Ý£ºRPTNO, ÆóÒµ×éÖ¯»ú¹¹´úÂë, RCV_DATE, SAFECODE, ÊÕ»ãÃÀÔª½ð¶î, ½»Ò×´úÂë
-# - S_EXPF: Íâ»ã¾ÖEXPFÊý¾Ý£ºCUSTOM_RPT_NO, ÆóÒµ×éÖ¯»ú¹¹´úÂë, EXP_DATE
-# - Train: »ð³µ³öÐÐ£ºÐÕÃû, ÐÔ±ð, Éí·ÝÖ¤ºÅ, ³µ´Î, ³öÐÐÈÕÆÚ, ³µÏáºÅ, ×ùÎ»ºÅ, ³ö·¢³ÇÊÐ, µ½´ï³ÇÊÐ, ³ö·¢Ê±¼ä
+# - BankAccount: é“¶è¡Œè´¦å·ï¼šå¼€æˆ·è¡Œ, å¡å·, å¼€æˆ·æ—¥æœŸ, å¼€æˆ·äººèº«ä»½è¯, å¼€æˆ·äººå§“å, å¼€æˆ·åæ‰‹æœºå·
+# - BankBill: é“¶è¡Œè´¦å•æ˜Žç»†ï¼šè½¬å‡ºè´¦å·, è½¬è´¦äººå§“å, æ”¶æ¬¾è´¦å·, æ”¶æ¬¾äººå§“å, è½¬è´¦é‡‘é¢, äº¤æ˜“ç±»åž‹, è½¬è´¦æ¸ é“, è½¬è´¦æ–¹å¼, è½¬è´¦æ—¶é—´, è½¬è´¦é™„è¨€, æ‰‹ç»­è´¹
+# - Bus: æ±½è½¦å‡ºè¡Œï¼šå§“å, æ€§åˆ«, èº«ä»½è¯å·, å‡ºè¡Œæ—¥æœŸ, è½¦æ¬¡, å‡ºå‘æ±½è½¦ç«™, å‘è½¦æ—¶é—´, åº§ä½å·, å‡ºå‘åŸŽå¸‚, åˆ°è¾¾åŸŽå¸‚
+# - CDC: æ•°æ®ç¤ºä¾‹ï¼š"2016-06-12 11:02:03","1465700523694","U","CDC_MIRROR","7325830911134034944","ZQU","6217844638089027584","MU"
+# - Flight: é£žæœºå‡ºè¡Œï¼šå§“å, è‹±æ–‡å, èº«ä»½è¯å·, æ€§åˆ«, èˆªç­å·, å‡ºè¡Œæ—¥æœŸ, åº§ä½å·, èµ·é£žæ—¶é—´, èµ·é£žåŸŽå¸‚, åˆ°è¾¾åŸŽå¸‚
+# - Hotel: é…’åº—ï¼šé…’åº—åç§°, åœ°å€
+# - People: äººå£ï¼šå§“å, æ€§åˆ«, æ°‘æ—, èº«ä»½è¯å·, å‡ºç”Ÿæ—¥æœŸ, æ‰‹æœºå·, é‚®ç®±åœ°å€, å®¶åº­ä½å€
+# - PhoneCall: è¯å•æ•°æ®ï¼šä¸»å«äººå§“å, ä¸»å«äººèº«ä»½è¯, ä¸»å«äººç”µè¯å·ç , è¢«å«äººå§“å, è¢«å«äººèº«ä»½è¯, è¢«å«äººç”µè¯å·ç , é€šè¯æ—¥æœŸ, å¼€å§‹æ—¶é—´, é€šè¯æ—¶å¸¸
+# - S_CORP_RCV: å¤–æ±‡å±€RCVæ•°æ®ï¼šRPTNO, ä¼ä¸šç»„ç»‡æœºæž„ä»£ç , RCV_DATE, SAFECODE, æ”¶æ±‡ç¾Žå…ƒé‡‘é¢, äº¤æ˜“ä»£ç 
+# - S_EXPF: å¤–æ±‡å±€EXPFæ•°æ®ï¼šCUSTOM_RPT_NO, ä¼ä¸šç»„ç»‡æœºæž„ä»£ç , EXP_DATE
+# - Train: ç«è½¦å‡ºè¡Œï¼šå§“å, æ€§åˆ«, èº«ä»½è¯å·, è½¦æ¬¡, å‡ºè¡Œæ—¥æœŸ, è½¦åŽ¢å·, åº§ä½å·, å‡ºå‘åŸŽå¸‚, åˆ°è¾¾åŸŽå¸‚, å‡ºå‘æ—¶é—´
 #
 # Each column MUST be separated by ``
 #template=Name``T:HH:mm:ss & 12:00:00 & 14:59:59``IDCard``R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
