--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
     compile group: 'org.apache.kafka', name: 'kafka-clients', version: '1.0.0'
-//    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
