--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -30,8 +30,8 @@
 template=Flight
 delimiter=,
 topic=test
-thread.num=4
-data.per.second=1000000
+thread.num=2
+data.per.second=3
 # ----------Schema Configuration----------
 # [People (IDCard)]
 # Date format MUST be 'yyyyMMdd'
