--- a/stream-gui/build.gradle
+++ b/stream-gui/build.gradle
@@ -10,5 +10,18 @@ repositories {
 }
 
 dependencies {
+    compile project(":stream-cli")
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'io.transwarp.streamgui.MainFrame'
+    }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
