--- a/stream-cli/src/main/resources/generator.properties
+++ b/stream-cli/src/main/resources/generator.properties
@@ -27,13 +27,13 @@
 #
 # Each column MUST be separated by ``
 #template=Name``T:HH:mm:ss & 12:00:00 & 14:59:59``IDCard``R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
-template=PhoneCall
+template=BankAccount
 delimiter=,
 topic=test
 partition.num=2
 replication.num=1
-thread.num=2
-data.per.second=3
+thread.num=4
+data.per.second=20
 # ----------Schema Configuration----------
 # [People (IDCard)]
 # Date format MUST be 'yyyyMMdd'
