--- a/stream-cli/src/main/resources/generator.properties
+++ b/stream-cli/src/main/resources/generator.properties
@@ -34,6 +34,7 @@ partition.num=2
 replication.num=1
 thread.num=4
 data.per.second=20
+print.msg=false
 # ----------Schema Configuration----------
 # [People (IDCard)]
 # Date format MUST be 'yyyyMMdd'
