--- a/stream-cli/src/main/resources/generator.properties
+++ b/stream-cli/src/main/resources/generator.properties
@@ -3,15 +3,16 @@
 # [Column]
 # - Address: 地址，可配置地址权重（address_code文件）
 # - Bank: 银行名称，可配置权重（bank文件）
+# - City: 城市名称，可配置权重（cities文件）
 # - Email: 邮箱，可配置邮箱后缀（email_suffix文件）
 # - Gender: 性别
-# - IDCard: 身份证号，可配置生日范围
+# - IDCard: 身份证号，可配置生日范围，如：IDCard("19500101","20101231")
 # - Name: 姓名，可配置姓权重（first_name文件）
 # - Nation: 民族，可配置权重（nation文件）
 # - PhoneNumber: 手机号码，可配置手机号前缀权重（phone_prefix文件）
+# - RegexString: 使用正则表达式生成随机字符串，如：RegexString("[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?")
 # - SafeInfo: 外汇局代码，可配置权重（safe_info文件）
-# - T:Format & Begin & End: 时间戳，如：T:yyyy/MM/dd HH:mm:ss & 1980/01/01 00:00:00 & 2015/12/31 23:59:59
-# - R:Regular Expression: 使用正则表达式生成随机字符串，如：R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
+# - Timestamp: 时间戳，如：Timestamp("yyyy/MM/dd HH:mm:ss","1980/01/01 00:00:00","2015/12/31 23:59:59")
 # [Schema]
 # - BankAccount: 银行账号：开户行, 卡号, 开户日期, 开户人身份证, 开户人姓名, 开户名手机号
 # - BankBill: 银行账单明细：转出账号, 转账人姓名, 收款账号, 收款人姓名, 转账金额, 交易类型, 转账渠道, 转账方式, 转账时间, 转账附言, 手续费
@@ -26,7 +27,7 @@
 # - Train: 火车出行：姓名, 性别, 身份证号, 车次, 出行日期, 车厢号, 座位号, 出发城市, 到达城市, 出发时间
 #
 # Each column MUST be separated by ``
-#template=Name``T:HH:mm:ss & 12:00:00 & 14:59:59``IDCard``R:[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?
+#template=Name()``Timestamp("yyyy/MM/dd HH:mm:ss","1980/01/01 00:00:00","2015/12/31 23:59:59")``IDCard("19500101","20101231")``RegexString("[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/\\.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/\\.?")
 template=BankAccount
 delimiter=,
 topic=test
@@ -36,7 +37,7 @@ thread.num=4
 data.per.second=20
 print.msg=false
 # ----------Schema Configuration----------
-# [People (IDCard)]
+# [People]
 # Date format MUST be 'yyyyMMdd'
 people.birthday.begin=19500101
 people.birthday.end=20101231
